--- a/SynchroWebpage/creation.html
+++ b/SynchroWebpage/creation.html
@@ -216,7 +216,7 @@ body {
 <!-- Logo -->
 <div class="logo">
   <a href="index.html">
-    <img src="logo.svg" alt="Website Logo">
+    <img src="/SynchroWebpage/assets/Img/logo.svg" alt="Website Logo">
   </a>
 </div>
 
