Move index to root for page deployment

--- a/SynchroWebpage/dashboard.html
+++ b/SynchroWebpage/dashboard.html
@@ -16,14 +16,14 @@
 
   <!-- โลโก้มุมซ้าย -->
 <div class="logo">
-  <a href="index.html">
+  <a href="/index.html">
     <img src="/SynchroWebpage/assets/Img/logo.svg" alt="Website Logo">
   </a>
 </div>
   <!-- ✅ Navbar -->
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="/index.html">Home</a></li>
       <li><a href="dashboard.html">Dashboard</a></li>
       <li><a href="result.html">Result</a></li>
       <li><a href="documentation.html">Documentation</a></li>
