--- a/SynchroWebpage/arduinoplay.html
+++ b/SynchroWebpage/arduinoplay.html
@@ -11,18 +11,18 @@
 <body>
   <header class="site-header">
     <div class="container nav-wrap">
-      <a href="index.html#home" class="brand"><span class="note">🎵</span> Synchrom</a>
+      <a href="/index.html#home" class="brand"><span class="note">🎵</span> Synchrom</a>
       <button class="hamburger" aria-label="Toggle menu" aria-expanded="false"><span></span><span></span><span></span></button>
       <nav class="nav" id="navbar">
         <ul>
             <!-- กลับหน้าแรก -->
-            <li><a href="index.html#home">Home</a></li>
+            <li><a href="/index.html#home">Home</a></li>
 
             <!-- เลื่อนในหน้า arduinoplay เอง -->
             <li><a href="#result" data-target="result" class="nav-link">Result</a></li>
 
             <!-- ไปแท็บเอกสารที่หน้าแรก -->
-            <li><a href="index.html#documentation">Documentation</a></li>
+            <li><a href="/index.html#documentation">Documentation</a></li>
         </ul>
         </nav>
     </div>
