--- a/SynchroWebpage/documentation.html
+++ b/SynchroWebpage/documentation.html
@@ -20,7 +20,7 @@
   <!-- โลโก้มุมซ้าย -->
   <!-- โลโก้มุมซ้าย -->
 <div class="logo">
-  <a href="index.html">
+  <a href="/index.html">
     <img src="/SynchroWebpage/assets/Img/logo.svg" alt="Website Logo">
   </a>
 </div>
@@ -28,7 +28,7 @@
   <!-- Navbar -->
   <nav>
     <ul>
-<li><a href="index.html">Home</a></li>
+<li><a href="/index.html">Home</a></li>
 <li><a href="dashboard.html">Dashboard</a></li>
 <li><a href="result.html">Result</a></li>
 <li><a href="documentation.html">Documentation</a></li>
