Rename Folder Name Synchro -> SynchroController to avoid confusion & change directory to be compatible with github page build

--- a/SynchroWebpage/dashboard.html
+++ b/SynchroWebpage/dashboard.html
@@ -17,13 +17,13 @@
   <!-- โลโก้มุมซ้าย -->
 <div class="logo">
   <a href="/index.html">
-    <img src="/SynchroWebpage/assets/Img/logo.svg" alt="Website Logo">
+    <img src="assets/Img/logo.svg" alt="Website Logo">
   </a>
 </div>
   <!-- ✅ Navbar -->
   <nav>
     <ul>
-      <li><a href="/index.html">Home</a></li>
+      <li><a href="/Synchro/index.html">Home</a></li>
       <li><a href="dashboard.html">Dashboard</a></li>
       <li><a href="result.html">Result</a></li>
       <li><a href="documentation.html">Documentation</a></li>
@@ -52,13 +52,13 @@
 
         <div class="controls">
           <button class="ctrl-btn">
-            <img src="/SynchroWebpage/assets/Img/angle-left.svg" alt="Previous">
+            <img src="assets/Img/angle-left.svg" alt="Previous">
           </button>
           <button class="ctrl-btn play">
-            <img src="/SynchroWebpage/assets/Img/play.svg" alt="Play">
+            <img src="assets/Img/play.svg" alt="Play">
           </button>
           <button class="ctrl-btn">
-            <img src="/SynchroWebpage/assets/Img/angle-right.svg" alt="Next">
+            <img src="assets/Img/angle-right.svg" alt="Next">
           </button>
         </div>
       </div>
@@ -79,13 +79,13 @@
 
         <div class="controls">
           <button class="ctrl-btn">
-            <img src="/SynchroWebpage/assets/Img/angle-left.svg" alt="Previous">
+            <img src="assets/Img/angle-left.svg" alt="Previous">
           </button>
           <button class="ctrl-btn play">
-            <img src="/SynchroWebpage/assets/Img/play.svg" alt="Play">
+            <img src="assets/Img/play.svg" alt="Play">
           </button>
           <button class="ctrl-btn">
-            <img src="/SynchroWebpage/assets/Img/angle-right.svg" alt="Next">
+            <img src="assets/Img/angle-right.svg" alt="Next">
           </button>
         </div>
       </div>
@@ -106,13 +106,13 @@
 
         <div class="controls">
           <button class="ctrl-btn">
-            <img src="/SynchroWebpage/assets/Img/angle-left.svg" alt="Previous">
+            <img src="assets/Img/angle-left.svg" alt="Previous">
           </button>
           <button class="ctrl-btn play">
-            <img src="/SynchroWebpage/assets/Img/play.svg" alt="Play">
+            <img src="assets/Img/play.svg" alt="Play">
           </button>
           <button class="ctrl-btn">
-            <img src="/SynchroWebpage/assets/Img/angle-right.svg" alt="Next">
+            <img src="assets/Img/angle-right.svg" alt="Next">
           </button>
         </div>
       </div>
@@ -133,13 +133,13 @@
 
         <div class="controls">
           <button class="ctrl-btn">
-            <img src="/SynchroWebpage/assets/Img/angle-left.svg" alt="Previous">
+            <img src="assets/Img/angle-left.svg" alt="Previous">
           </button>
           <button class="ctrl-btn play">
-            <img src="/SynchroWebpage/assets/Img/play.svg" alt="Play">
+            <img src="assets/Img/play.svg" alt="Play">
           </button>
           <button class="ctrl-btn">
-            <img src="/SynchroWebpage/assets/Img/angle-right.svg" alt="Next">
+            <img src="assets/Img/angle-right.svg" alt="Next">
           </button>
         </div>
       </div>
