--- a/SynchroWebpage/result.html
+++ b/SynchroWebpage/result.html
@@ -18,15 +18,15 @@
   <!-- ✅ โลโก้มุมซ้ายบน -->
   <!-- โลโก้มุมซ้าย -->
 <div class="logo">
-  <a href="index.html">
-    <img src="/SynchroWebpage/assets/Img/logo.svg" alt="Website Logo">
+  <a href="/Synchro/index.html">
+    <img src="assets/Img/logo.svg" alt="Website Logo">
   </a>
 </div>
 
   <!-- ✅ Navbar -->
   <nav>
     <ul>
-      <li><a href="/index.html">Home</a></li>
+      <li><a href="/Synchro/index.html">Home</a></li>
       <li><a href="dashboard.html">Dashboard</a></li>
       <li><a href="result.html">Result</a></li>
       <li><a href="documentation.html">Documentation</a></li>
@@ -56,10 +56,10 @@
       <!-- 🔹 Side Box -->
       <div class="side-box fade-up">
         <div class="circle top-circle">
-          <img src="/SynchroWebpage/assets/Img/align-justify.svg" alt="icon-top">
+          <img src="assets/Img/align-justify.svg" alt="icon-top">
         </div>
         <div class="circle bottom-circle">
-          <img src="/SynchroWebpage/assets/Img/refresh.svg" alt="icon-bottom">
+          <img src="assets/Img/refresh.svg" alt="icon-bottom">
         </div>
       </div>
 
@@ -88,9 +88,9 @@
 
         <!-- ✅ ปุ่มควบคุมเพลง -->
         <div class="music-controls">
-          <img src="/SynchroWebpage/assets/Img/angle-left.svg" alt="previous" class="control-btn">
-          <img src="/SynchroWebpage/assets/Img/play.svg" alt="pause" class="control-btn">
-          <img src="/SynchroWebpage/assets/Img/angle-right.svg" alt="next" class="control-btn">
+          <img src="assets/Img/angle-left.svg" alt="previous" class="control-btn">
+          <img src="assets/Img/play.svg" alt="pause" class="control-btn">
+          <img src="assets/Img/angle-right.svg" alt="next" class="control-btn">
         </div>
       </div>
 
