--- a/index.html
+++ b/index.html
@@ -9,25 +9,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rythm Something</title>
-    <link rel="stylesheet" href="/SynchroWebpage/style.css">
+    <link rel="stylesheet" href="SynchroWebpage/style.css">
 </head>
 <body class="home-page">
   <!-- โลโก้มุมซ้าย -->
   <!-- โลโก้มุมซ้าย -->
 <div class="logo">
-  <a href="/index.html">
-    <img src="/SynchroWebpage/assets/Img/logo.svg" alt="Website Logo">
+  <a href="index.html">
+    <img src="SynchroWebpage/assets/Img/logo.svg" alt="Website Logo">
   </a>
 </div>
 
   <!-- ✅ Navbar -->
   <nav>
     <ul>
-      <li><a href="/index.html">Home</a></li>
-      <li><a href="/SynchroWebpage/dashboard.html">Dashboard</a></li>
-      <li><a href="/SynchroWebpage/result.html">Result</a></li>
-      <li><a href="/SynchroWebpage/documentation.html">Documentation</a></li>
-      <li><a href="/SynchroWebpage/documentation.html#ourteam">Member</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="SynchroWebpage/dashboard.html">Dashboard</a></li>
+      <li><a href="SynchroWebpage/result.html">Result</a></li>
+      <li><a href="SynchroWebpage/documentation.html">Documentation</a></li>
+      <li><a href="SynchroWebpage/documentation.html#ourteam">Member</a></li>
   </nav>
   
     <main class="hero">
@@ -41,7 +41,7 @@
                 มันทำให้ผมรู้สึกแย่ ที่จริงคุณเป็นใครกันแน่เราไม่ได้เป็นดังวันแรก
                 </div>
             </p>
-            <a href="/SynchroWebpage/dashboard.html" class="btn">Start</a>
+            <a href="SynchroWebpage/dashboard.html" class="btn">Start</a>
         </div>
     </main>
 </body>
