--- a/SynchroWebpage/documentation.html
+++ b/SynchroWebpage/documentation.html
@@ -20,15 +20,15 @@
   <!-- โลโก้มุมซ้าย -->
   <!-- โลโก้มุมซ้าย -->
 <div class="logo">
-  <a href="/index.html">
-    <img src="/SynchroWebpage/assets/Img/logo.svg" alt="Website Logo">
+  <a href="/Synchro/index.html">
+    <img src="/Synchro/SynchroWebpage/assets/Img/logo.svg" alt="Website Logo">
   </a>
 </div>
 
   <!-- Navbar -->
   <nav>
     <ul>
-<li><a href="/index.html">Home</a></li>
+<li><a href="/Synchro/index.html">Home</a></li>
 <li><a href="dashboard.html">Dashboard</a></li>
 <li><a href="result.html">Result</a></li>
 <li><a href="documentation.html">Documentation</a></li>
