--- a/SynchroWebpage/creation.html
+++ b/SynchroWebpage/creation.html
@@ -13,6 +13,8 @@
 <!-- Reuse main stylesheet -->
 <link rel="stylesheet" href="style.css">
 
+<link rel="icon" href="assets/icon.png">
+
 <style>
 /* Page-specific styles only */
 #container {
