--- a/SynchroWebpage/documentation.html
+++ b/SynchroWebpage/documentation.html
@@ -14,6 +14,8 @@
 
   <!-- ลิงก์ไปไฟล์ CSS -->
   <link rel="stylesheet" href="documentation.css">
+
+  <link rel="icon" href="assets/icon.png">
 </head>
 <body>
 
