--- a/SynchroWebpage/result.html
+++ b/SynchroWebpage/result.html
@@ -12,6 +12,8 @@
 
   <!-- ✅ CSS -->
   <link rel="stylesheet" href="result.css">
+  
+  <link rel="icon" href="assets/icon.png">
 </head>
 
 <body>
