--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rythm Something</title>
     <link rel="stylesheet" href="SynchroWebpage/style.css">
+    <link rel="icon" href="SynchroWebpage/assets/icon.png">
 </head>
 <body class="home-page">
   <!-- โลโก้มุมซ้าย -->
