--- a/SynchroWebpage/dashboard.html
+++ b/SynchroWebpage/dashboard.html
@@ -11,6 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Orbitron&family=Noto+Sans+Thai:wght@100..900&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="style.css">
+
+  <link rel="icon" href="assets/icon.png">
 </head>
 <body class="dashboard-page">
 
