link creation page with dashboard and fix icon redirecting destination

--- a/SynchroWebpage/creation.html
+++ b/SynchroWebpage/creation.html
@@ -309,7 +309,7 @@ body {
 
 <!-- Logo -->
 <div class="logo">
-  <a href="index.html">
+  <a href="/Synchro/index.html">
     <img src="assets/Img/logo.svg" alt="Website Logo">
   </a>
 </div>
