--- a/SynchroWebpage/dashboard.html
+++ b/SynchroWebpage/dashboard.html
@@ -34,7 +34,8 @@
   </nav>
 
   <!-- ปุ่มเพิ่มเพลง -->
-  <button class="btn small add-btn">+ New Song</button>
+  <button class="btn small add-btn">+ Upload Song</button>
+  <a href="creation.html" class="btn small create-btn">+ Create Song</a>
 
   <!-- เพลงทั้งหมด -->
   <main class="song-grid">
