--- a/SynchroWebpage/creation.html
+++ b/SynchroWebpage/creation.html
@@ -317,7 +317,7 @@ body {
 <!-- Navbar -->
 <nav>
   <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="/Synchro/index.html">Home</a></li>
     <li><a href="dashboard.html">Dashboard</a></li>
     <li><a href="result.html">Result</a></li>
     <li><a href="documentation.html">Documentation</a></li>
