--- a/SynchroWebpage/documentation.html
+++ b/SynchroWebpage/documentation.html
@@ -22,7 +22,7 @@
   <!-- โลโก้มุมซ้าย -->
   <!-- โลโก้มุมซ้าย -->
 <div class="logo">
-  <a href="/Synchro/index.html">
+  <a href="/index.html">
     <img src="/Synchro/SynchroWebpage/assets/Img/logo.svg" alt="Website Logo">
   </a>
 </div>
@@ -30,7 +30,7 @@
   <!-- Navbar -->
   <nav>
     <ul>
-<li><a href="/Synchro/index.html">Home</a></li>
+<li><a href="/index.html">Home</a></li>
 <li><a href="dashboard.html">Dashboard</a></li>
 <li><a href="result.html">Result</a></li>
 <li><a href="documentation.html">Documentation</a></li>
