Update document detail real

--- a/SynchroWebpage/documentation.html
+++ b/SynchroWebpage/documentation.html
@@ -41,8 +41,9 @@
   <!-- ส่วนเนื้อหา -->
   <div class="content reveal Documentation">
     <h1>Documentation</h1>
+    <h1>บทคัดย่อ</h1>
     <p>
-      สุนทรภู่ (นามเดิม ภู่) เกิดเมื่อวันที่ 26 มิถุนายน พ.ศ. 2329 ที่กรุงเทพฯ ในสมัยรัชกาลที่ 1 ท่านเป็นกวีในราชสำนักสมัยรัตนโกสินทร์ และมีผลงานโดดเด่นหลายเรื่อง เช่น พระอภัยมณี นิราศภูเขาทอง และ นิราศสุพรรณ ท่านเข้ารับราชการในรัชสมัยพระบาทสมเด็จพระพุทธเลิศหล้านภาลัย เมื่อสิ้นรัชกาลได้ออกบวชเป็นเวลา 20 ปี และกลับมารับราชการอีกครั้งในสมัยพระบาทสมเด็จพระนั่งเกล้าเจ้าอยู่หัว ก่อนจะถึงแก่อสัญกรรมในรัชสมัยพระบาทสมเด็จพระจอมเกล้าเจ้าอยู่หัว ในปี พ.ศ. 2398 
+      Synchro จะมาแก้ปัญหา ปัญหาสมาธิสั้นจากการใช้โซเชียลมีเดียมากเกินไป การหลุดโฟกัสจากการเรียนหรือกิจกรรมที่ทำอยู่ ความเบื่อหน่ายและความเครียดจากการเรียน ความสำคัญ Project ส่งผลต่อ คุณภาพการเรียนรู้และประสิทธิภาพการทำงาน ของผู้ใช้ ปัญหาสมาธิสั้นทำให้ ผลสัมฤทธิ์ทางการเรียนลดลง หากไม่แก้ไข อาจส่งผลระยะยาวต่อการใช้ชีวิตประจำวันและสุขภาพจิต ใครได้ประโยชน์จาก Project นี้ ผู้เล่นทั่วไป ที่ต้องการความเพลิดเพลินและการผ่อนคลาย นักเรียน/นักศึกษา ที่ต้องการฝึกสมาธิและการจดจ่อผ่านเกม นักพัฒนา/ผู้สนใจด้าน Embedded และ IoT ที่ได้เรียนรู้การประยุกต์ฮาร์ดแวร์กับซอฟต์แวร์ ปัญหาที่แก้ไขได้ด้วย Project นี้ เกม Rhythm บังคับให้ผู้เล่น จดจ่อกับจังหวะดนตรีและเวลาการกดปุ่ม ฝึก การโฟกัสและการตอบสนองที่แม่นยำ ผ่านการเล่นซ้ำ ระบบเว็บแสดงผลคะแนนและสถิติ → ผู้เล่น เห็นพัฒนาการของตนเอง → เกิดแรงจูงใจ ช่วยเปลี่ยนการฝึกสมาธิที่น่าเบื่อ → เป็นเกมที่สนุกและมี Feedback ทันที
     </p>
   </div>
 
@@ -54,22 +55,22 @@
   <div class="card-section">
     <div class="card reveal">
       <img src="https://i.pinimg.com/736x/04/03/e2/0403e215352a5df099820e4a1a4b2930.jpg" alt="pic1">
-      <h3>ShioPan</h3>
+      <h3>ESP32</h3>
       <p>เป็นแค่เด็กช่างโลโซ จะไปสู้ไฮโซได้ไง เห็นเสือหมอบอย่านึกว่าเสือกลัว เห็นคนถ่อมตัวอย่านึกว่าไม่มีน้ำยา เด็กช่างแล้วไง ก็มีหัวใจเหมือนกัน</p>
     </div>
     <div class="card reveal">
       <img src="https://i.pinimg.com/736x/9a/cd/4e/9acd4eed79435cf7e4e501a0baac218e.jpg" alt="pic2">
-      <h3>Shushiro</h3>
+      <h3>SD Card adapter</h3>
       <p>แพนเค้ก สูตรขนมอร่อย ๆ แบบโฮมเมดที่นิยมกินเป็นมื้อเช้า สูตรหนานุ่มเนื้อแน่น ราดน้ำเชื่อมชุ่มฉ่ำ ทำง่ายกินง่าย อิ่มสบายท้อง</p>
     </div>
     <div class="card reveal">
       <img src="https://i.pinimg.com/736x/3a/17/f6/3a17f6ca709b06610d8187bda0ada9ff.jpg" alt="pic3">
-      <h3>Katsumidori</h3>
+      <h3>4 Push color button</h3>
       <p>เป็นแค่เด็กช่างโลโซ จะไปสู้ไฮโซได้ไง เห็นเสือหมอบอย่านึกว่าเสือกลัว เห็นคนถ่อมตัวอย่านึกว่าไม่มีน้ำยา เด็กช่างแล้วไง ก็มีหัวใจเหมือนกัน</p>
     </div>
     <div class="card reveal">
       <img src="https://i.pinimg.com/1200x/0a/88/21/0a8821ab3e38af0bbcd16cab5b6ef9be.jpg" alt="pic4">
-      <h3>Cocoshibanya</h3>
+      <h3>TFT LCD ขนาด 3.2" Color module</h3>
       <p>แพนเค้ก สูตรขนมอร่อย ๆ แบบโฮมเมดที่นิยมกินเป็นมื้อเช้า สูตรหนานุ่มเนื้อแน่น ราดน้ำเชื่อมชุ่มฉ่ำ ทำง่ายกินง่าย อิ่มสบายท้อง</p>
     </div>
   </div>
@@ -77,7 +78,16 @@
   <div class="content reveal">
     <h1>What make this Synchrom Special ?</h1>
     <p>
-      อาการเวียนหัว บ้านหมุน เดินเซ ส่วนใหญ่เกิดจากความผิดปกติของระบบการทรงตัวของร่างกาย อย่าง หูชั้นใน หรือสมอง โดยผู้ป่วยมักจะมีอาการแสดงเวลาที่มีการเคลื่อนไหวศีรษะหรือใช้สายตา ซึ่งการบำบัดด้วยวิธีการบริหารร่างกายนั้นเป็นการฝึกเพื่อปรับสมดุลของการทรงตัว ทำให้อาการเวียนหัวที่เป็นอยู่บรรเทาลงได้
+      1.ผู้เล่นสามารถโต้ตอบกับเกมผ่านปุ่มจริงๆ
+    </p>
+    <p>
+      2.จำนวนเพลงไม่จำกัดจากการ import เพลงเข้าอุปกรณ์ผ่าน WebApp ประโยชน์​ ของ Project
+    </p>
+    <p>
+      3.พัฒนาประสบการณ์เล่นเกมแนว Rhythm
+    </p>
+    <p>
+      4.พัฒนาความเร็วในการตอบสนองต่อสิ่งเร้า
     </p>
   </div>
 
@@ -180,9 +190,18 @@ void loop() {
   </script>
 
   <div class="content reveal">
-    <h1>What make this Synchrom Special ?</h1>
+    <h1>What Different from normal rhythm game ?</h1>
     <p>
-      อาการเวียนหัว บ้านหมุน เดินเซ ส่วนใหญ่เกิดจากความผิดปกติของระบบการทรงตัวของร่างกาย อย่าง หูชั้นใน หรือสมอง โดยผู้ป่วยมักจะมีอาการแสดงเวลาที่มีการเคลื่อนไหวศีรษะหรือใช้สายตา ซึ่งการบำบัดด้วยวิธีการบริหารร่างกายนั้นเป็นการฝึกเพื่อปรับสมดุลของการทรงตัว ทำให้อาการเวียนหัวที่เป็นอยู่บรรเทาลงได้
+      1.การอัพเดตค่าตัวเลขที่กดถูกต้องผ่านทางเว็ปไซต์เรียลไทม์
+    </p> 
+    <p>
+      2.ขึ้นชื่อเพลงที่เล่นอยู่บนเว็ปไซต์
+    </p> 
+    <p>
+      3.การแสดงค่าให้เห็นได้ชัดเจนผ่านช่องทางเว็ปไซต์ เพราะมีการเชื่อมต่อผ่าน wifi และ Database
+    </p>   
+    <p>
+      4.การสรุปผลการกดผ่านทางเว็ปไซต์ ใช้บอร์ด Arduino ในการเก็บค่า คำนวณแล้วส่งต่อเก็บใน Database
     </p>
   </div>
 
@@ -193,23 +212,23 @@ void loop() {
   <div class="card-section">
     <div class="card reveal">
       <img src="https://i.pinimg.com/736x/04/03/e2/0403e215352a5df099820e4a1a4b2930.jpg" alt="pic1">
-      <h3>ShioPan</h3>
-      <p>670770390</p>
+      <h3>นายธนัทภัทร พรหมทอง</h3>
+      <p>67070069</p>
     </div>
     <div class="card reveal">
       <img src="https://i.pinimg.com/736x/9a/cd/4e/9acd4eed79435cf7e4e501a0baac218e.jpg" alt="pic2">
-      <h3>Shushiro</h3>
-      <p>67070193</p>
+      <h3>นางสาวพิชฎา แก้วศิริ</h3>
+      <p>67070117</p>
     </div>
     <div class="card reveal">
       <img src="https://i.pinimg.com/736x/3a/17/f6/3a17f6ca709b06610d8187bda0ada9ff.jpg" alt="pic3">
-      <h3>Katsumidori</h3>
-      <p>67070293</p>
+      <h3>นายภูริ ประชาสุขสิน</h3>
+      <p>67070137</p>
     </div>
     <div class="card reveal">
       <img src="https://i.pinimg.com/1200x/0a/88/21/0a8821ab3e38af0bbcd16cab5b6ef9be.jpg" alt="pic4">
-      <h3>Cocoshibanya</h3>
-      <p>670709090</p>
+      <h3>นางสาวยัสมิน่า ฟาริส ยาซีน นาเซอร์</h3>
+      <p>67070146</p>
     </div>
   </div>
 </body>
