Update website and readme

--- a/SynchroWebpage/documentation.html
+++ b/SynchroWebpage/documentation.html
@@ -54,24 +54,34 @@
   <!-- กล่องข้อมูล -->
   <div class="card-section">
     <div class="card reveal">
-      <img src="https://i.pinimg.com/736x/04/03/e2/0403e215352a5df099820e4a1a4b2930.jpg" alt="pic1">
+      <img src="/SynchroWebpage/assets/Img/esp32.jpg" alt="pic1">
       <h3>ESP32</h3>
-      <p>เป็นแค่เด็กช่างโลโซ จะไปสู้ไฮโซได้ไง เห็นเสือหมอบอย่านึกว่าเสือกลัว เห็นคนถ่อมตัวอย่านึกว่าไม่มีน้ำยา เด็กช่างแล้วไง ก็มีหัวใจเหมือนกัน</p>
+      <p>.ใช้เชื่อมจอ LCD color และเชื่อมค่านำไปอัพเดตในเว็ปไซต์แบบ Realtime</p>
     </div>
     <div class="card reveal">
-      <img src="https://i.pinimg.com/736x/9a/cd/4e/9acd4eed79435cf7e4e501a0baac218e.jpg" alt="pic2">
+      <img src="/SynchroWebpage/assets/Img/SD card adapter.jpg" alt="pic2">
       <h3>SD Card adapter</h3>
-      <p>แพนเค้ก สูตรขนมอร่อย ๆ แบบโฮมเมดที่นิยมกินเป็นมื้อเช้า สูตรหนานุ่มเนื้อแน่น ราดน้ำเชื่อมชุ่มฉ่ำ ทำง่ายกินง่าย อิ่มสบายท้อง</p>
+      <p>บรรจุเพลงที่เล่นของ Game Rhythm</p>
     </div>
     <div class="card reveal">
-      <img src="https://i.pinimg.com/736x/3a/17/f6/3a17f6ca709b06610d8187bda0ada9ff.jpg" alt="pic3">
+      <img src="/SynchroWebpage/assets/Img/pushbuttoncolor.jpg" alt="pic3">
       <h3>4 Push color button</h3>
-      <p>เป็นแค่เด็กช่างโลโซ จะไปสู้ไฮโซได้ไง เห็นเสือหมอบอย่านึกว่าเสือกลัว เห็นคนถ่อมตัวอย่านึกว่าไม่มีน้ำยา เด็กช่างแล้วไง ก็มีหัวใจเหมือนกัน</p>
+      <p>กดปุ่มให้ตรงกับจังหวะในจอ lCD</p>
     </div>
     <div class="card reveal">
-      <img src="https://i.pinimg.com/1200x/0a/88/21/0a8821ab3e38af0bbcd16cab5b6ef9be.jpg" alt="pic4">
+      <img src="/SynchroWebpage/assets/Img/TFT LCD Color module.jpg" alt="pic4">
       <h3>TFT LCD ขนาด 3.2" Color module</h3>
-      <p>แพนเค้ก สูตรขนมอร่อย ๆ แบบโฮมเมดที่นิยมกินเป็นมื้อเช้า สูตรหนานุ่มเนื้อแน่น ราดน้ำเชื่อมชุ่มฉ่ำ ทำง่ายกินง่าย อิ่มสบายท้อง</p>
+      <p>แสดงแทบจังหวะเกม Rhythm และหน้า Menu เกม</p>
+    </div>
+    <div class="card reveal">
+      <img src="/SynchroWebpage/assets/Img/Amplifier GF 1002.jpg" alt="pic4">
+      <h3>Amplifier GF 1002</h3>
+      <p>เพิ่ม-ลด เสียงลำโพง</p>
+    </div>
+    <div class="card reveal">
+      <img src="/SynchroWebpage/assets/Img/Buzzer.jpg" alt="pic4">
+      <h3>Buzzer</h3>
+      <p>เล่นเสียงเพลงระหว่างเล่นเกม</p>
     </div>
   </div>
 
@@ -214,21 +224,25 @@ void loop() {
       <img src="https://i.pinimg.com/736x/04/03/e2/0403e215352a5df099820e4a1a4b2930.jpg" alt="pic1">
       <h3>นายธนัทภัทร พรหมทอง</h3>
       <p>67070069</p>
+      <p>Arduino/Web backend</p>
     </div>
     <div class="card reveal">
       <img src="https://i.pinimg.com/736x/9a/cd/4e/9acd4eed79435cf7e4e501a0baac218e.jpg" alt="pic2">
       <h3>นางสาวพิชฎา แก้วศิริ</h3>
       <p>67070117</p>
+      <p>Web Frontend/Poster</p>
     </div>
     <div class="card reveal">
       <img src="https://i.pinimg.com/736x/3a/17/f6/3a17f6ca709b06610d8187bda0ada9ff.jpg" alt="pic3">
       <h3>นายภูริ ประชาสุขสิน</h3>
       <p>67070137</p>
+      <p>Arduino/Web backend</p>
     </div>
     <div class="card reveal">
       <img src="https://i.pinimg.com/1200x/0a/88/21/0a8821ab3e38af0bbcd16cab5b6ef9be.jpg" alt="pic4">
       <h3>นางสาวยัสมิน่า ฟาริส ยาซีน นาเซอร์</h3>
       <p>67070146</p>
+      <p>Web Frontend/Poster</p>
     </div>
   </div>
 </body>
