--- a/SynchroWebpage/dashboard.html
+++ b/SynchroWebpage/dashboard.html
@@ -157,21 +157,6 @@
     </div>
   </div>
 
-  <script>
-    window.addEventListener("load", () => {
-      const popup = document.getElementById("connectPopup");
-      const content = document.getElementById("mainContent");
-
-      // ✅ แสดง popup + เบลอพื้นหลัง
-      content.classList.add("blurred");
-      popup.classList.add("show");
-
-      // ✅ ปิด popup เมื่อคลิกกากบาท
-      document.getElementById("closePopup").addEventListener("click", () => {
-        popup.classList.remove("show");
-        content.classList.remove("blurred");
-      });
-    });
-  </script>
+<script src="assets/dashboard.js"></script>
 </body>
 </html>
