--- a/SynchroWebpage/documentation.html
+++ b/SynchroWebpage/documentation.html
@@ -30,7 +30,7 @@
   <!-- Navbar -->
   <nav>
     <ul>
-<li><a href="/index.html">Home</a></li>
+<li><a href="/Synchro/index.html">Home</a></li>
 <li><a href="dashboard.html">Dashboard</a></li>
 <li><a href="result.html">Result</a></li>
 <li><a href="documentation.html">Documentation</a></li>
