--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   
     <main class="hero">
         <div class="text-box">
-        <h1>Rythm<br>something</h1>
+        <h1>Synchro<br>Rhythm Game</h1>
             <p>
                 <div class="normal-text">
                   วิธีแสดงความรักคุณบกพร่อง<br>
