--- a/SynchroWebpage/documentation.html
+++ b/SynchroWebpage/documentation.html
@@ -22,7 +22,7 @@
   <!-- โลโก้มุมซ้าย -->
   <!-- โลโก้มุมซ้าย -->
 <div class="logo">
-  <a href="/index.html">
+  <a href="/Synchro/index.html">
     <img src="/Synchro/SynchroWebpage/assets/Img/logo.svg" alt="Website Logo">
   </a>
 </div>
