--- a/SynchroWebpage/dashboard.html
+++ b/SynchroWebpage/dashboard.html
@@ -17,14 +17,14 @@
   <div id="mainContent">
     <!-- โลโก้มุมซ้าย -->
     <div class="logo">
-      <a href="/index.html">
+      <a href="/Synchro/index.html">
         <img src="assets/Img/logo.svg" alt="Website Logo">
       </a>
     </div>
     <!-- ✅ Navbar -->
     <nav>
       <ul>
-        <li><a href="/index.html">Home</a></li>
+        <li><a href="/Synchro/index.html">Home</a></li>
         <li><a href="dashboard.html">Dashboard</a></li>
         <li><a href="result.html">Result</a></li>
         <li><a href="documentation.html">Documentation</a></li>
