--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="normal-text">
                   วิธีแสดงความรักคุณบกพร่อง<br>
                   ผมไปทำอะไรให้คุณจนต้องคำร้ายกัน ต้องทำร้ายกัน<br>
-                  เท่าโรนกถึงพอ เวลาที่เห็นข้อความของคุณขึ้นจอ<br>
+                  เท่าไหร่ถึงพอ เวลาที่เห็นข้อความของคุณขึ้นจอ<br>
                   มันทำให้ผมรู้สึกแย่ ที่จริงคุณเป็นใครกันแน่เราไม่ได้เป็นดังวันแรก
                 </div>
             </p>
