--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   </nav>
   
     <main class="hero">
-        <div class="text-box">
+        <div class="text-box" id="pageTitle">
         <h1>Synchro<br>Rhythm Game</h1>
             <p>
                 <div class="normal-text">
