เปลี่ยนข้อความภาษาไทยที่ bug ใน doc

--- a/SynchroWebpage/documentation.html
+++ b/SynchroWebpage/documentation.html
@@ -41,7 +41,7 @@
   <!-- ส่วนเนื้อหา -->
   <div class="content reveal Documentation">
     <h1>Documentation</h1>
-    <h1>บทคัดย่อ</h1>
+    <h1>Abstract</h1>
     <p>
       Synchro จะมาแก้ปัญหา ปัญหาสมาธิสั้นจากการใช้โซเชียลมีเดียมากเกินไป การหลุดโฟกัสจากการเรียนหรือกิจกรรมที่ทำอยู่ ความเบื่อหน่ายและความเครียดจากการเรียน ความสำคัญ Project ส่งผลต่อ คุณภาพการเรียนรู้และประสิทธิภาพการทำงาน ของผู้ใช้ ปัญหาสมาธิสั้นทำให้ ผลสัมฤทธิ์ทางการเรียนลดลง หากไม่แก้ไข อาจส่งผลระยะยาวต่อการใช้ชีวิตประจำวันและสุขภาพจิต ใครได้ประโยชน์จาก Project นี้ ผู้เล่นทั่วไป ที่ต้องการความเพลิดเพลินและการผ่อนคลาย นักเรียน/นักศึกษา ที่ต้องการฝึกสมาธิและการจดจ่อผ่านเกม นักพัฒนา/ผู้สนใจด้าน Embedded และ IoT ที่ได้เรียนรู้การประยุกต์ฮาร์ดแวร์กับซอฟต์แวร์ ปัญหาที่แก้ไขได้ด้วย Project นี้ เกม Rhythm บังคับให้ผู้เล่น จดจ่อกับจังหวะดนตรีและเวลาการกดปุ่ม ฝึก การโฟกัสและการตอบสนองที่แม่นยำ ผ่านการเล่นซ้ำ ระบบเว็บแสดงผลคะแนนและสถิติ → ผู้เล่น เห็นพัฒนาการของตนเอง → เกิดแรงจูงใจ ช่วยเปลี่ยนการฝึกสมาธิที่น่าเบื่อ → เป็นเกมที่สนุกและมี Feedback ทันที
     </p>
@@ -56,7 +56,7 @@
     <div class="card reveal">
       <img src="/Synchro/SynchroWebpage/assets/Img/esp32.jpg" alt="pic1">
       <h3>ESP32</h3>
-      <p>.ใช้เชื่อมจอ LCD color และเชื่อมค่านำไปอัพเดตในเว็ปไซต์แบบ Realtime</p>
+      <p>ใช้เชื่อมจอ LCD color และเชื่อมค่านำไปอัพเดตในเว็ปไซต์แบบ Realtime</p>
     </div>
     <div class="card reveal">
       <img src="/Synchro/SynchroWebpage/assets/Img/SD card adapter.jpg" alt="pic2">
@@ -70,7 +70,7 @@
     </div>
     <div class="card reveal">
       <img src="/Synchro/SynchroWebpage/assets/Img/TFT LCD Color module.jpg" alt="pic4">
-      <h3>TFT LCD ขนาด 3.2" Color module</h3>
+      <h3>TFT LCD 3.2" Color module</h3>
       <p>แสดงแทบจังหวะเกม Rhythm และหน้า Menu เกม</p>
     </div>
     <div class="card reveal">
@@ -80,7 +80,7 @@
     </div>
     <div class="card reveal">
       <img src="/Synchro/SynchroWebpage/assets/Img/Buzzer.jpg" alt="pic4">
-      <h3>ลำโพง 0.5W 8 โอห์ม</h3>
+      <h3>ลำโพง 0.5W 8 ohm</h3>
       <p>เล่นเสียงเพลงระหว่างเล่นเกม</p>
     </div>
   </div>
