--- a/SynchroWebpage/documentation.html
+++ b/SynchroWebpage/documentation.html
@@ -80,7 +80,7 @@
     </div>
     <div class="card reveal">
       <img src="/Synchro/SynchroWebpage/assets/Img/Buzzer.jpg" alt="pic4">
-      <h3>ลำโพง 0.5W 8 ohm</h3>
+      <h3>Speaker 0.5W 8 ohm</h3>
       <p>เล่นเสียงเพลงระหว่างเล่นเกม</p>
     </div>
   </div>
