update doc and dashboard

--- a/SynchroWebpage/documentation.html
+++ b/SynchroWebpage/documentation.html
@@ -43,8 +43,7 @@
     <h1>Documentation</h1>
     <h1>บทคัดย่อ</h1>
     <p>
-      Synchro จะมาแก้ปัญหา ปัญหาสมาธิสั้นจากการใช้โซเชียลมีเดียมากเกินไป การหลุดโฟกัสจากการเรียนหรือกิจกรรมที่ทำอยู่ ความเบื่อหน่ายและความเครียดจากการเรียน ความสำคัญ Project ส่งผลต่อ คุณภาพการเรียนรู้และประสิทธิภาพการทำงาน ของผู้ใช้ ปัญหาสมาธิสั้นทำให้ ผลสัมฤทธิ์ทางการเรียนลดลง หากไม่แก้ไข อาจส่งผลระยะยาวต่อการใช้ชีวิตประจำวันและสุขภาพจิต ใครได้ประโยชน์จาก Project นี้ ผู้เล่นทั่วไป ที่ต้องการความเพลิดเพลินและการผ่อนคลาย นักเรียน/นักศึกษา ที่ต้องการฝึกสมาธิและการจดจ่อผ่านเกม นักพัฒนา/ผู้สนใจด้าน Embedded และ IoT ที่ได้เรียนรู้การประยุกต์ฮาร์ดแวร์กับซอฟต์แวร์ ปัญหาที่แก้ไขได้ด้วย Project นี้ เกม Rhythm บังคับให้ผู้เล่น จดจ่อกับจังหวะดนตรีและเวลาการกดปุ่ม ฝึก การโฟกัสและการตอบสนองที่แม่นยำ ผ่านการเล่นซ้ำ ระบบเว็บแสดงผลคะแนนและสถิติ → ผู้เล่น เห็นพัฒนาการของตนเอง → เกิดแรงจูงใจ ช่วยเปลี่ยนการฝึกสมาธิที่น่าเบื่อ → เป็นเกมที่สนุกและมี Feedback ทันที
-    </p>
+     โครงการ Synchro มีวัตถุประสงค์เพื่อช่วยบรรเทาและป้องกันปัญหาการขาดสมาธิที่เกิดจากการใช้สื่อสังคมออนไลน์มากเกินไป การหลุดโฟกัสจากการเรียนหรือกิจกรรมที่กำลังปฏิบัติรวมถึงความเบื่อหน่ายและความเครียดที่สัมพันธ์กับการเรียนรู้ ปัญหาเหล่านี้หากปล่อยไว้นานอาจส่งผลต่อ คุณภาพการเรียนรู้ ประสิทธิภาพการทำงาน และสุขภาพจิตในระยะยาว โดยเฉพาะในกลุ่มนักเรียนและนักศึกษาที่ต้องอาศัยสมาธิในการทำงานเชิงลึก (deep work) และการเรียนรู้ต่อเนื่อง แนวคิดของโครงการคือการใช้ “เกมจังหวะ (Rhythm Game)” เป็นสื่อกลางในการฝึกสมาธิ โดยออกแบบให้ผู้เล่นต้องจดจ่อกับจังหวะดนตรี เวลา และตำแหน่งการกดปุ่มอย่างต่อเนื่อง การเล่นซ้ำจะช่วยเสริม การโฟกัสเฉพาะจุด (focused attention) และ การตอบสนองที่แม่นยำ (accurate response) ซึ่งเป็นทักษะที่สามารถถ่ายทอดกลับไปสู่การเรียนหรือการทำงานจริงได้</p>
   </div>
 
   <div class="content reveal hardware-used">
