--- a/index.html
+++ b/index.html
@@ -36,10 +36,9 @@
         <h1>Synchro<br>Rhythm Game</h1>
             <p>
                 <div class="normal-text">
-                  วิธีแสดงความรักคุณบกพร่อง<br>
-                  ผมไปทำอะไรให้คุณจนต้องคำร้ายกัน ต้องทำร้ายกัน<br>
-                  เท่าไหร่ถึงพอ เวลาที่เห็นข้อความของคุณขึ้นจอ<br>
-                  มันทำให้ผมรู้สึกแย่ ที่จริงคุณเป็นใครกันแน่เราไม่ได้เป็นดังวันแรก
+                  Synchro คือเกมจังหวะบน ESP32 ที่ให้ผู้เล่นกดปุ่มจริง 4 ปุ่มให้ตรงจังหวะเพลงที่เลือกจากหน้าเว็บ ระบบจะแสดงคะแนน combo และ<br> 
+                  ความแม่นยำแบบเรียลไทม์บนเว็บ เพราะเชื่อมต่อผ่าน Wi-Fi และบันทึกลงฐานข้อมูลเหมาะกับคนที่อยากฝึกโฟกัสและรีแอ็กชัน<br>
+                  ผ่านเกมที่เล่นง่ายแต่กดพลาดไม่ได้<br>
                 </div>
             </p>
             <a href="SynchroWebpage/dashboard.html" class="btn">Start</a>
