--- a/SynchroWebpage/documentation.html
+++ b/SynchroWebpage/documentation.html
@@ -43,7 +43,8 @@
     <h1>Documentation</h1>
     <h1>Abstract</h1>
     <p>
-     โครงการ Synchro มีวัตถุประสงค์เพื่อช่วยบรรเทาและป้องกันปัญหาการขาดสมาธิที่เกิดจากการใช้สื่อสังคมออนไลน์มากเกินไป การหลุดโฟกัสจากการเรียนหรือกิจกรรมที่กำลังปฏิบัติรวมถึงความเบื่อหน่ายและความเครียดที่สัมพันธ์กับการเรียนรู้ ปัญหาเหล่านี้หากปล่อยไว้นานอาจส่งผลต่อ คุณภาพการเรียนรู้ ประสิทธิภาพการทำงาน และสุขภาพจิตในระยะยาว โดยเฉพาะในกลุ่มนักเรียนและนักศึกษาที่ต้องอาศัยสมาธิในการทำงานเชิงลึก (deep work) และการเรียนรู้ต่อเนื่อง แนวคิดของโครงการคือการใช้ “เกมจังหวะ (Rhythm Game)” เป็นสื่อกลางในการฝึกสมาธิ โดยออกแบบให้ผู้เล่นต้องจดจ่อกับจังหวะดนตรี เวลา และตำแหน่งการกดปุ่มอย่างต่อเนื่อง การเล่นซ้ำจะช่วยเสริม การโฟกัสเฉพาะจุด (focused attention) และ การตอบสนองที่แม่นยำ (accurate response) ซึ่งเป็นทักษะที่สามารถถ่ายทอดกลับไปสู่การเรียนหรือการทำงานจริงได้</p>
+      โครงงาน Synchro มุ่งแก้ปัญหาสมาธิสั้นและการหลุดโฟกัสจากการใช้โซเชียลมีเดียมากเกินไป ซึ่งส่งผลต่อคุณภาพการเรียนรู้และสุขภาพจิตในระยะยาว โดยผสมผสานการฝึกสมาธิผ่านเกมแนวจังหวะ (Rhythm Game) ที่ให้ผู้เล่นกดปุ่มตามจังหวะเพลง เพื่อฝึกการจดจ่อและการตอบสนองอย่างแม่นยำ ระบบเว็บจะแสดงคะแนนและสถิติเพื่อสร้างแรงจูงใจให้พัฒนาต่อเนื่อง 
+ผู้ใช้กลุ่มเป้าหมาย ได้แก่ ผู้เล่นทั่วไป นักเรียน/นักศึกษา และผู้สนใจด้าน Embedded หรือ IoT อินพุตของระบบคือการกดปุ่ม เพลง และการตั้งค่าจากเว็บ ส่วนเอาต์พุตคือเสียงเพลง เอฟเฟกต์แสง และคะแนนที่แสดงบนหน้าจอ</p>
   </div>
 
   <div class="content reveal hardware-used">
