--- a/SynchroWebpage/dashboard.html
+++ b/SynchroWebpage/dashboard.html
@@ -153,8 +153,8 @@
   <div class="popup-overlay" id="connectPopup">
     <div class="popup-box">
       <button class="close-popup" id="closePopup">×</button>
-      <h2>CONNECT TO ARDUINO</h2>
-      <p>Please connect your Arduino device to continue.</p>
+      <h2>CONNECT TO ESP32</h2>
+      <p>Please connect your ESP32 device to continue.</p>
     </div>
   </div>
 
