--- a/SynchroWebpage/documentation.html
+++ b/SynchroWebpage/documentation.html
@@ -202,6 +202,18 @@ void loop() {
       <p>Web Frontend/Poster</p>
     </div>
   </div>
+  <footer class="site-footer">
+  <p>Physical Computing Project 2025 - Synchro</p>
+  <div class="footer-buttons">
+    <a href="https://github.com/GANKSTERPHY/Synchro.git" target="_blank" rel="noopener" class="footer-btn github-btn">
+      GitHub
+    </a>
+    <a href="https://github.com/your-organization/synchro-poster" target="_blank" rel="noopener" class="footer-btn poster-btn">
+      Poster
+    </a>
+  </div>
+</footer>
+
   <script src="assets/Document.js"></script>
 </body>
 </html>
